--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.13",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
     "@angular/forms": "~11.2.13",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "ngx-animations": "^5.0.4",
+    "ngx-dropzone": "^3.0.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
